buildscript {
	ext {
		springBootVersion = '3.2.1'
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
		classpath "io.spring.gradle:dependency-management-plugin:1.1.4"
	}
}

allprojects {
	repositories {
		mavenCentral()
	}
}

subprojects {

	group = 'com.cos'
	version = '0.0.2'

	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}
	sourceCompatibility = '17'

	repositories {
		mavenCentral()
	}

	dependencies {

		//lombok
		compileOnly 'org.projectlombok:lombok:1.18.30'
		annotationProcessor 'org.projectlombok:lombok:1.18.30'

		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
		annotationProcessor 'org.projectlombok:lombok'
		testCompileOnly 'org.projectlombok:lombok'
		testAnnotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.springframework.security:spring-security-test'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}

}

project(':cercat-storage') {
	bootJar {
		enabled = false
	}

	jar {
		enabled = false
	}
}

project(':cercat-application') {
	bootJar {
		enabled = false
	}

	jar {
		enabled = false
	}
}